# SysTinkDyn2

./: CMakeLists.txt  LICENSE  README.md
src/ext/glad/include/: shader.hpp
src/ext/glad/include/glad/: glad.h
src/ext/glad/src/: glad.c
src/stdyn/cgmath/: vec.cpp  vec.h
src/stdyn/cmd/: stdyn.cpp
src/stdyn/render/: render.cpp  render.h  renderglwf.cpp  renderglwf.h  screen.cpp  screen.h  shapes.cpp  shapes.h
src/stdyn/render/old/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  loadShader.cpp  rendercustom copy 2.cpp  rendercustom copy.cpp  rendercustomCopy.cpp  renderglwf.cpp  rendersdl2.cpp  rendersdl2.h  shader.h
src/stdyn/schema/: stdynschema.cpp  stdynschema.h
zFiles/: test1.stdyn  test1.stdyn.out
